recursion.cons.reverse.Reverse.scala.error
Erreur de compilation :
Reverse:11: error: type mismatch;
 found   : Int
 required: List[Int]
  return reverse(l.head)
                   ^