recursion.cons.reverse.Reverse.scala.code
def reverse(l:List[Int]): List[Int] = {
    var a = l.head;
  if(l == Nil)
  	return Nil;
  else
    l.tail :: l
  	if(l.head != a)
			a :: l
  
  return reverse(l.head)
}